Create register user api
